# airlines

./: .gitignore  aircraft_from_csv_to_db.py  airport_list_from_csv_to_db.py  airport_weather_from_csv_to_db.py  flight_from_csv_to_db.py  import_aircaft.py  import_flights.py  import_id_airport.py  import_weather_date.py  pyproject.toml  requirements.txt
notebooks/: 01_Pobieranie_danych.ipynb  02_Inicjowanie_bazy_danych.ipynb  03_Populacja_bazy_danych.ipynb  04_Analiza_danych_01.ipynb  04_Analiza_danych_02.ipynb  04_Analiza_danych_03.ipynb  05_Budowa_schematu_reporting.ipynb
